commit by karan after scanner implementation 30032024 night

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -10,4 +10,5 @@
 
     <color name="green_popti">#4DE453</color>
     <color name="red">#FF0000</color>
+    <color name="bussinesscard_bg_color">#31116A</color>
 </resources>
