--- a/app/src/main/res/layout/activity_dashboard.xml
+++ b/app/src/main/res/layout/activity_dashboard.xml
@@ -1,242 +1,27 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/body_container"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/light_white"
     tools:context=".DashboardActivity">
 
-    <androidx.cardview.widget.CardView
-        android:id="@+id/cvofBussinessCard"
+    <com.google.android.material.bottomnavigation.BottomNavigationView
+        android:id="@+id/bottom_navigation_view"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
         android:layout_margin="10dp"
-        app:cardBackgroundColor="@color/bussinesscard_bg_color"
-        app:layout_constraintTop_toTopOf="parent">
-
-        <androidx.constraintlayout.widget.ConstraintLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_marginStart="8dp"
-            android:layout_marginBottom="10dp"
-            android:layout_marginEnd="5dp"
-            android:padding="5dp">
-
-            <androidx.appcompat.widget.AppCompatImageView
-                android:id="@+id/ivShopIcon"
-                android:layout_width="15dp"
-                android:layout_height="15dp"
-                android:src="@drawable/shop_card_logo"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintTop_toTopOf="parent" />
-
-            <TextView
-                android:id="@+id/tvBussinessName"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:maxLines="2"
-                android:text="Bussiness Name"
-                android:textColor="@color/white"
-                android:textSize="25sp"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/ivShopIcon" />
+        android:layout_marginVertical="5dp"
+        android:background="@drawable/round_corner_bg_for_bottomnav"
+        android:elevation="3dp"
+        app:itemIconSize="25dp"
+        app:itemIconTint="@color/white"
+        app:itemRippleColor="@color/transparent"
+        app:itemTextColor="@color/white"
+        app:menu="@menu/item_menu" />
 
 
-            <TextView
-                android:id="@+id/tvBussinessDescription"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="5dp"
-                android:maxLines="5"
-                android:text="Bussiness Description"
-                android:textColor="@color/white"
-                android:textSize="18sp"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/tvBussinessName" />
-
-            <TextView
-                android:id="@+id/tvBussinessAddress"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="5dp"
-                android:drawableStart="@drawable/ic_baseline_location_on_24"
-                android:drawablePadding="5dp"
-                android:maxLines="2"
-                android:text="Bussiness Address"
-                android:textColor="@color/white"
-                android:textSize="15sp"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/tvBussinessDescription" />
-
-            <androidx.appcompat.widget.AppCompatImageView
-                android:id="@+id/ivCallIcon"
-                android:layout_width="20dp"
-                android:layout_height="20dp"
-                android:layout_marginTop="20dp"
-                android:src="@drawable/call"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/tvBussinessAddress" />
-
-            <TextView
-                android:id="@+id/tvmobilenumber"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="8dp"
-                android:layout_marginTop="20dp"
-                android:text="0000000000"
-                android:textColor="@color/white"
-                android:textSize="12sp"
-                app:layout_constraintLeft_toRightOf="@+id/ivCallIcon"
-                app:layout_constraintTop_toBottomOf="@+id/tvBussinessAddress" />
-
-            <androidx.appcompat.widget.AppCompatImageView
-                android:id="@+id/ivFbIcon"
-                android:layout_width="20dp"
-                android:layout_height="20dp"
-                android:layout_marginStart="10dp"
-                android:layout_marginTop="20dp"
-                android:src="@drawable/facebook"
-                app:layout_constraintLeft_toRightOf="@+id/tvmobilenumber"
-                app:layout_constraintTop_toBottomOf="@+id/tvBussinessAddress" />
-
-            <TextView
-                android:id="@+id/tvfacebookid"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="8dp"
-                android:layout_marginTop="20dp"
-                android:text="xxxxx@fb"
-                android:textColor="@color/white"
-                android:textSize="12sp"
-                app:layout_constraintLeft_toRightOf="@+id/ivFbIcon"
-                app:layout_constraintTop_toBottomOf="@+id/tvBussinessAddress" />
-
-
-            <androidx.appcompat.widget.AppCompatImageView
-                android:id="@+id/ivInstaIcon"
-                android:layout_width="20dp"
-                android:layout_height="20dp"
-                android:layout_marginStart="10dp"
-                android:layout_marginTop="20dp"
-                android:src="@drawable/instagram"
-                android:textSize="12sp"
-                app:layout_constraintLeft_toRightOf="@+id/tvfacebookid"
-                app:layout_constraintTop_toBottomOf="@+id/tvBussinessAddress" />
-
-            <TextView
-                android:id="@+id/tvInstaId"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="8dp"
-                android:layout_marginTop="20dp"
-                android:layout_marginEnd="5dp"
-                android:text="xxxxx@insta"
-                android:textColor="@color/white"
-                app:layout_constraintLeft_toRightOf="@+id/ivInstaIcon"
-                app:layout_constraintTop_toBottomOf="@+id/tvBussinessAddress" />
-        </androidx.constraintlayout.widget.ConstraintLayout>
-
-
-    </androidx.cardview.widget.CardView>
-
-    <ScrollView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        app:layout_constraintTop_toBottomOf="@+id/cvofBussinessCard">
-
-        <androidx.constraintlayout.widget.ConstraintLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent">
-
-            <LinearLayout
-                android:id="@+id/row1"
-                android:layout_width="0dp"
-                android:layout_height="175dp"
-                android:layout_marginTop="10dp"
-                android:orientation="horizontal"
-                android:padding="10dp"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintHorizontal_bias="0.0"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent">
-
-                <androidx.cardview.widget.CardView
-                    android:id="@+id/cvstockandBilling"
-                    android:layout_width="0dp"
-                    android:layout_height="match_parent"
-                    android:layout_margin="10dp"
-                    android:layout_weight="1"
-                    app:cardCornerRadius="20dp"
-                    app:cardElevation="20dp">
-
-                    <RelativeLayout
-                        android:layout_width="match_parent"
-                        android:layout_height="match_parent">
-
-                        <TextView
-                            android:id="@+id/tvAddStock"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:layout_below="@+id/ivAddStock"
-                            android:layout_centerHorizontal="true"
-                            android:layout_marginTop="10dp"
-                            android:text="Add Stock"
-                            android:textColor="@color/black"
-                            android:textSize="20sp" />
-
-                        <ImageView
-                            android:id="@+id/ivAddStock"
-                            android:layout_width="70dp"
-                            android:layout_height="70dp"
-                            android:layout_centerHorizontal="true"
-                            android:layout_marginTop="15dp"
-                            android:src="@drawable/add_stock_png" />
-                    </RelativeLayout>
-
-                </androidx.cardview.widget.CardView>
-
-                <androidx.cardview.widget.CardView
-                    android:id="@+id/cvofBilling"
-                    android:layout_width="0dp"
-                    android:layout_height="match_parent"
-                    android:layout_margin="10dp"
-                    android:layout_weight="1"
-                    app:cardCornerRadius="20dp"
-                    app:cardElevation="20dp">
-
-                    <RelativeLayout
-                        android:layout_width="match_parent"
-                        android:layout_height="match_parent">
-
-                        <TextView
-                            android:id="@+id/elecName"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:layout_below="@+id/elecImage"
-                            android:layout_centerHorizontal="true"
-                            android:layout_marginTop="10dp"
-                            android:text="Print Bill"
-                            android:textColor="@color/black"
-                            android:textSize="20sp" />
-
-                        <ImageView
-                            android:id="@+id/elecImage"
-                            android:layout_width="70dp"
-                            android:layout_height="70dp"
-                            android:layout_centerHorizontal="true"
-                            android:layout_marginTop="15dp"
-                            android:src="@drawable/slip" />
-                    </RelativeLayout>
-                </androidx.cardview.widget.CardView>
-            </LinearLayout>
-
-
-        </androidx.constraintlayout.widget.ConstraintLayout>
-
-
-    </ScrollView>
-
-
-</androidx.constraintlayout.widget.ConstraintLayout>
+</RelativeLayout>
