--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -144,6 +144,7 @@
                     android:gravity="center"
                     >
                     <RadioButton
+                        android:id="@+id/rbOwner"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_marginHorizontal="30dp"
@@ -151,6 +152,7 @@
                         android:buttonTint="@color/radiobuttons"/>
 
                     <RadioButton
+                        android:id="@+id/rbEmployee"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_marginHorizontal="30dp"
