--- a/app/src/main/res/layout/item_file_genratedbill_data.xml
+++ b/app/src/main/res/layout/item_file_genratedbill_data.xml
@@ -1,34 +1,52 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:orientation="horizontal"
-    android:weightSum="6">
+    android:layout_margin="5dp"
+    app:cardBackgroundColor="@color/bussinesscard_bg_color"
+    app:cardCornerRadius="8dp">
 
-    <TextView
-        android:id="@+id/tvBillId"
-        android:layout_width="wrap_content"
+
+    <LinearLayout
+        android:id="@+id/llofBillItems"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_weight="1"
-        android:maxLines="4"
-        android:padding="5dp" />
-
-    <TextView
-        android:id="@+id/tvnoofItems"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_weight="2.5"
-        android:maxLines="4"
-        android:padding="5dp" />
-
-    <TextView
-        android:id="@+id/tvgrandTotal"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_weight="2.5"
-        android:maxLines="4"
-        android:padding="5dp" />
+        android:orientation="horizontal"
+        android:padding="10dp"
+        android:weightSum="6">
 
 
-</LinearLayout>
+        <TextView
+            android:id="@+id/tvBillId"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:maxLines="4"
+            android:padding="5dp"
+            android:textColor="@color/white"
+            android:textStyle="bold" />
+
+        <TextView
+            android:id="@+id/tvnoofItems"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight="2.5"
+            android:maxLines="4"
+            android:padding="5dp"
+            android:textColor="@color/white"
+            android:textStyle="bold" />
+
+        <TextView
+            android:id="@+id/tvgrandTotal"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight="2.5"
+            android:maxLines="4"
+            android:padding="5dp"
+            android:textColor="@color/white"
+            android:textStyle="bold" />
+
+
+    </LinearLayout>
+</androidx.cardview.widget.CardView>
