commit by karan after done successfully reverse billling list ,change bill format ,download bussiness card 25042024 afternoon

--- a/app/src/main/res/layout/activity_payment_plans.xml
+++ b/app/src/main/res/layout/activity_payment_plans.xml
@@ -29,18 +29,32 @@
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_marginVertical="25dp">
 
-         <androidx.recyclerview.widget.RecyclerView
-             android:id="@+id/rvPlansInfo"
-             android:layout_width="match_parent"
-             android:layout_height="wrap_content"
-             app:layout_constraintTop_toTopOf="parent"
-             app:layout_constraintStart_toStartOf="parent"
-             app:layout_constraintBottom_toTopOf="@+id/ivPrinterimgae"
-             app:layout_constraintEnd_toEndOf="parent"/>
+           >
+
+            <androidx.recyclerview.widget.RecyclerView
+                android:id="@+id/rvPlansInfo"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                app:layout_constraintBottom_toTopOf="@+id/tvContactInfo"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent" />
 
 
+            <TextView
+                android:id="@+id/tvContactInfo"
+                android:maxLines="3"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/pleasecontact"
+                android:layout_marginHorizontal="10dp"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                android:textSize="20sp"
+                android:textColor="@color/purple_700"
+                android:layout_marginTop="20dp"
+                app:layout_constraintTop_toBottomOf="@+id/rvPlansInfo"/>
 
             <ImageView
                 android:id="@+id/ivPrinterimgae"
@@ -50,7 +64,7 @@
                 android:layout_marginTop="20dp"
                 android:src="@drawable/pos_terminal"
                 app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/rvPlansInfo" />
+                app:layout_constraintTop_toBottomOf="@+id/tvContactInfo" />
         </androidx.constraintlayout.widget.ConstraintLayout>
 
 
